--- a/appsettings.json
+++ b/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "Mysql": "Server=localhost;Database=minimal_api;Uid=root;Pwd=230389;"
+  },
+  "Jwt": "minimal-api-alunos-vamos_lá"
 }
